# MyFirstProject

./: .gitignore  CMakeLists.txt  DealFile.cpp  Make.sh  P01GZ29_XX10151019A_210623_084730.XYZ  README.md  build.bat  huawei.cpp  myProgram.cs
DesignMode/: AbstractMethod.h  DesignMode.cpp  SingletonMode.cpp  SingletonMode.h  Test.h  TestClass.h  UndoStack.h
LeetCode/: BinarySearchTree.cpp  BinarySearchTree.h  LeetCode.cpp  Singleton.h  SortAlgorithm.h  ThreadPool.h  main.cpp  printf_tools.h  solution.cpp  solution.h  test.h  workspace.code-workspace
TestSolution/: main.cpp
result/: 10.000000.txt  17.500000.txt  22.200000.txt  25.500000.txt  27.000000.txt  6.500000.txt
rust_project/src/: main.rs
